<resources>
    <string name="app_name">WebView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="search">Buscar</string>
    <string name="next">Siguiente</string>
    <string name="previous">Volver</string>
    <string name="code">Codigo</string>
    <string name="name">Nombre</string>
    <string name="description">Descripcion</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_crud">CRUD</string>
</resources>